{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 42,
  "lineage": "8ba6b084-a750-e7a9-b60c-3104b46d433c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-18T15:13:57.838-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sysadmin-work-test-292709/global/firewalls/sysadmin-work-test-292709-app-fw-allow-http",
            "log_config": [],
            "name": "sysadmin-work-test-292709-app-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-work-test-292709-app-vpc",
            "priority": 1000,
            "project": "sysadmin-work-test-292709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/firewalls/sysadmin-work-test-292709-app-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-18T15:13:57.754-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sysadmin-work-test-292709/global/firewalls/sysadmin-work-test-292709-app-fw-allow-https",
            "log_config": [],
            "name": "sysadmin-work-test-292709-app-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-work-test-292709-app-vpc",
            "priority": 1000,
            "project": "sysadmin-work-test-292709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/firewalls/sysadmin-work-test-292709-app-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-18T15:13:57.826-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sysadmin-work-test-292709/global/firewalls/sysadmin-work-test-292709-app-fw-allow-rdp",
            "log_config": [],
            "name": "sysadmin-work-test-292709-app-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-work-test-292709-app-vpc",
            "priority": 1000,
            "project": "sysadmin-work-test-292709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/firewalls/sysadmin-work-test-292709-app-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-18T15:13:57.731-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sysadmin-work-test-292709/global/firewalls/sysadmin-work-test-292709-app-fw-allow-ssh",
            "log_config": [],
            "name": "sysadmin-work-test-292709-app-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-work-test-292709-app-vpc",
            "priority": 1000,
            "project": "sysadmin-work-test-292709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/firewalls/sysadmin-work-test-292709-app-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/images/packer-1603058506",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/zones/us-east1-b/disks/sysadmin-work-test-292709-app-vm-3fd3b454"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "sysadmin-work-test-292709-appvm-3fd3b454.sysadmin-work-test-292709-domain",
            "id": "projects/sysadmin-work-test-292709/zones/us-east1-b/instances/sysadmin-work-test-292709-app-vm-3fd3b454",
            "instance_id": "8960351329895645405",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "M_k2VpUowUM=",
            "name": "sysadmin-work-test-292709-app-vm-3fd3b454",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.196.227.11",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-work-test-292709-app-vpc",
                "network_ip": "10.10.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/regions/us-east1/subnetworks/sysadmin-work-test-292709-app-public-subnet-1",
                "subnetwork_project": "sysadmin-work-test-292709"
              }
            ],
            "project": "sysadmin-work-test-292709",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/zones/us-east1-b/instances/sysadmin-work-test-292709-app-vm-3fd3b454",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/sysadmin-work-test-292709/global/networks/sysadmin-work-test-292709-app-vpc",
            "name": "sysadmin-work-test-292709-app-vpc",
            "project": "sysadmin-work-test-292709",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-work-test-292709-app-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-18T15:13:57.944-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/sysadmin-work-test-292709/regions/us-east1/subnetworks/sysadmin-work-test-292709-app-public-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "sysadmin-work-test-292709-app-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-work-test-292709-app-vpc",
            "private_ip_google_access": false,
            "project": "sysadmin-work-test-292709",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/regions/us-east1/subnetworks/sysadmin-work-test-292709-app-public-subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}